[package]
name = "stage0"
version = "0.1.0"
edition = "2018"

[features]
dice-mfg = ["dice_crate", "digest", "hubpack", "salty", "serde", "sha3",
    "static_assertions", "unwrap-lite", "lib-lpc55-usart"]
dice-self = ["dice_crate", "digest", "salty", "sha3", "unwrap-lite",]
tz_support = []

[dependencies]
cfg-if = "1"
cortex-m = {version = "0.7", features = ["inline-asm"]}
cortex-m-rt = "0.6.12"
digest = { version = "0.10", optional = true }
hubpack = { version = "0.1", optional = true }
panic-semihosting = "0.5.3"
lib-lpc55-usart = { path = "../lib/lpc55-usart", optional = true }
lpc55_romapi = { path = "../lib/lpc55-romapi" }
panic-halt = "0.2.0"
lpc55-pac = {version = "0.4", features = ["rt"]}
ecdsa = { version = "0.12.4", default-features = false, features = ["der"] }
p256 = { version = "0.9.0", default-features = false, features = ["ecdsa", "ecdsa-core"] }
hmac = { version = "0.10.1", default-features = false }
sha3 = { version = "0.10", default-features = false, optional = true }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
static_assertions = { version = "1", optional = true }
zerocopy = "0.6.1"
abi = { path = "../sys/abi" }
unwrap-lite = { path = "../lib/unwrap-lite", optional = true }
nb = "1"

# features & deps can't have the same name, using this method from:
# https://github.com/RustCrypto/RSA/pull/41/files
[dependencies.dice_crate]
package = "dice"
path = "../lib/dice"
default-features = false
optional = true

[build-dependencies]
build-util = { path = "../build/util" }

[dependencies.salty]
git = "https://github.com/oxidecomputer/salty"
rev = "eb3c31858f631a7fb9934246c8efdef080d05726"
optional = true

[[bin]]
name = "stage0"
test = false
bench = false

