[package]
name = "stage0"
version = "0.1.0"
edition = "2021"

[features]
dice-mfg = ["dice_crate", "digest", "hubpack", "salty", "serde", "sha3",
            "static_assertions", "unwrap-lite", "lib-lpc55-usart"]
dice-self = ["dice_crate", "digest", "salty", "sha3", "unwrap-lite",]
tz_support = []

[dependencies]
cfg-if = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
digest = { workspace = true, optional = true }
ecdsa = { workspace = true }
hubpack = { workspace = true, optional = true }
lpc55-pac = { workspace = true, features = ["rt"] }
nb = { workspace = true }
p256 = { workspace = true }
panic-halt = { workspace = true }
panic-semihosting = { workspace = true }
salty = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
static_assertions = { workspace = true, optional = true }
zerocopy = { workspace = true }

abi = { path = "../sys/abi" }
lib-lpc55-usart = { path = "../lib/lpc55-usart", optional = true }
lpc55_romapi = { path = "../lib/lpc55-romapi" }
unwrap-lite = { path = "../lib/unwrap-lite", optional = true }

# features & deps can't have the same name, using this method from:
# https://github.com/RustCrypto/RSA/pull/41/files
[dependencies.dice_crate]
package = "dice"
path = "../lib/dice"
default-features = false
optional = true

[build-dependencies]
build-util = { path = "../build/util" }
serde = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "stage0"
test = false
bench = false

