[package]
name = "stage0"
version = "0.1.0"
edition = "2021"

[features]
dice-mfg = ["lpc55-puf", "salty", "static_assertions",  "lib-lpc55-usart"]
dice-self = ["lpc55-puf", "salty"]
tz_support = []

[dependencies]
cfg-if = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
digest = { workspace = true, optional = false}
ecdsa = { workspace = true }
hubpack = { workspace = true, optional = false}
lpc55-pac = { workspace = true, features = ["rt"] }
nb = { workspace = true }
p256 = { workspace = true }
panic-halt = { workspace = true }
panic-semihosting = { workspace = true }
salty = { workspace = true, optional = true }
serde = { workspace = true, optional = false }
sha3 = { workspace = true, optional = false }
static_assertions = { workspace = true, optional = true }
zerocopy = { workspace = true }
zeroize = { workspace = true }

abi = { path = "../sys/abi" }
armv8-m-mpu = { path = "../lib/armv8-m-mpu" }
lpc55-puf = { path = "../lib/lpc55-puf", optional = true }
lib-lpc55-usart = { path = "../lib/lpc55-usart", optional = true }
lpc55_romapi = { path = "../lib/lpc55-romapi" }
stage0-handoff = { path = "../lib/stage0-handoff"}
unwrap-lite = { path = "../lib/unwrap-lite", optional = false }

# features & deps can't have the same name, using this method from:
# https://github.com/RustCrypto/RSA/pull/41/files
[dependencies.dice_crate]
package = "dice"
path = "../lib/dice"
default-features = false
optional = false

[build-dependencies]
build-util = { path = "../build/util" }
serde = { workspace = true }
toml = { workspace = true }

[[bin]]
name = "stage0"
test = false
bench = false

