[package]
name = "task-aestest"
version = "0.1.0"
authors = ["Laura Abbott <laura@oxide.computer>"]
edition = "2018"

[dependencies]
# suppress default features to avoid including panic message collection, to
# ensure the aestest task remains tiny.
userlib = {path = "../userlib", default-features = false}
cortex-m-semihosting = "0.3.3"
zerocopy = "0.3.0"
lpc55-pac = "0.1.0"
sha1 = "0.6.0"

[features]
default = ["standalone"]
standalone = []

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-aestest"
test = false
bench = false
