[package]
name = "task-hiffy"
version = "0.1.0"
authors = ["Bryan Cantrill <bryan@oxide.computer>"]
edition = "2018"

[package.metadata.build]
target = "thumbv7em-none-eabihf"

[dependencies]
userlib = {path = "../userlib", default-features = false}
ringbuf = {path = "../ringbuf" }
drv-i2c-api = {path = "../drv/i2c-api"}
drv-spi-api = {path = "../drv/spi-api"}
drv-stm32h7-gpio-api = {path = "../drv/stm32h7-gpio-api", optional = true}
drv-lpc55-gpio-api = {path = "../drv/lpc55-gpio-api", optional = true}
drv-gimlet-hf-api = {path = "../drv/gimlet-hf-api", optional = true}
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-semihosting = { version = "0.3.5", optional = true }
cfg-if = "0.1.10"
zerocopy = "0.3.0"
num-traits = { version = "0.2.12", default-features = false }
hif = { path = "../hif" }
serde = { version = "1.0.114", default-features = false }
byteorder = { version = "1.3.4", default-features = false }

[build-dependencies]
build-util = {path = "../build-util"}

[features]
default = ["standalone"]
standalone = ["itm", "stm32h7"]
itm = [ "userlib/log-itm" ]
semihosting = [ "cortex-m-semihosting", "userlib/log-semihosting" ]
i2c = []
gpio = []
spi = []
stm32h7 = ["drv-stm32h7-gpio-api"]
lpc55 = ["drv-lpc55-gpio-api"]
qspi = ["drv-gimlet-hf-api"]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-hiffy"
test = false
bench = false
