[package]
name = "task-idle"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
userlib = {path = "../userlib"}

[features]
default = ["standalone"]
standalone = []

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-idle"
test = false
bench = false
