[package]
name = "task-idle"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

[package.metadata.build]
# Pick ONE of these compilation targets
# target = "thumbv6m-none-eabi"    # Cortex-M0 and Cortex-M0+
# target = "thumbv7m-none-eabi"    # Cortex-M3
# target = "thumbv7em-none-eabi"   # Cortex-M4 and Cortex-M7 (no FPU)
target = "thumbv7em-none-eabihf" # Cortex-M4F and Cortex-M7F (with FPU)

[dependencies]
# suppress default features to avoid including panic message collection, to
# ensure the idle task remains tiny.
userlib = {path = "../userlib", default-features = false}
cortex-m = { version = "0.6.2", features = ["inline-asm"] }

[features]
default = ["standalone"]
standalone = []

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-idle"
test = false
bench = false
