[package]
name = "task-jefe"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

[dependencies]
abi = {path = "../abi"}
userlib = {path = "../userlib"}
stm32f4 = {version = "0.10.0", features = ["stm32f407"]}
zerocopy = "0.3.0"
cortex-m = "0.6.0"
cortex-m-semihosting = {version = "0.3.3", optional = true}

[features]
default = ["standalone"]
standalone = ["itm"]
itm = [ "userlib/log-itm" ]
semihosting = [ "cortex-m-semihosting", "userlib/log-semihosting" ]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-jefe"
test = false
bench = false

[package.metadata.build]
# Pick ONE of these compilation targets
# target = "thumbv6m-none-eabi"    # Cortex-M0 and Cortex-M0+
# target = "thumbv7m-none-eabi"    # Cortex-M3
# target = "thumbv7em-none-eabi"   # Cortex-M4 and Cortex-M7 (no FPU)
target = "thumbv7em-none-eabihf" # Cortex-M4F and Cortex-M7F (with FPU)
