[package]
name = "task-jefe"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

[dependencies]
abi = {path = "../abi"}
userlib = {path = "../userlib" }
ringbuf = {path = "../ringbuf" }
num-traits = { version = "0.2.12", default-features = false }
zerocopy = "0.3.0"
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-semihosting = { version = "0.3.5", optional = true }

[features]
default = ["standalone"]
standalone = ["itm"]
itm = [ "userlib/log-itm" ]
semihosting = [ "cortex-m-semihosting", "userlib/log-semihosting" ]

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-jefe"
test = false
bench = false
