[package]
name = "task-net"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
userlib = {path = "../userlib"}
drv-stm32h7-eth = {path = "../drv/stm32h7-eth", features = ["with-smoltcp"]}
drv-stm32h7-gpio-api = {path = "../drv/stm32h7-gpio-api"}
drv-stm32h7-rcc-api = {path = "../drv/stm32h7-rcc-api"}

[dependencies.stm32h7]
git = "https://github.com/oxidecomputer/stm32-rs-nightlies"
features = ["stm32h743"]

[dependencies.smoltcp]
version = "0.7.1"
default-features = false
features = [
    "proto-ipv4",
    "proto-ipv6",
    "ethernet",
    "socket-udp",
]

[features]
default = ["standalone"]
standalone = []

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-net"
test = false
bench = false
