[package]
name = "task-oh_no"
version = "0.1.0"
authors = ["Steve Klabnik <steve.klabnik@oxide.computer>"]
edition = "2018"

[package.metadata.build]
# Pick ONE of these compilation targets
# target = "thumbv6m-none-eabi"    # Cortex-M0 and Cortex-M0+
# target = "thumbv7m-none-eabi"    # Cortex-M3
# target = "thumbv7em-none-eabi"   # Cortex-M4 and Cortex-M7 (no FPU)
target = "thumbv7em-none-eabihf" # Cortex-M4F and Cortex-M7F (with FPU)

[dependencies]
userlib = {path = "../userlib"}
cortex-m = "0.6.2"
cortex-m-semihosting = { version = "0.3.5" }
zerocopy = "0.3.0"

[features]
default = ["standalone"]
standalone = []

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-oh_no"
test = false
bench = false
