[package]
name = "task-oh_no2"
version = "0.1.0"
authors = ["Steve Klabnik <steve.klabnik@oxide.computer>"]
edition = "2018"

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

[dependencies]
userlib = {path = "../userlib"}
cortex-m = "0.6.2"
cortex-m-semihosting = { version = "0.3.5" }
zerocopy = "0.3.0"

[features]
default = ["standalone"]
standalone = []

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-oh_no2"
test = false
bench = false
