[package]
name = "task-ping"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
userlib = {path = "../userlib", features = ["log"]}
drv-user-leds-api = {path = "../drv/user-leds-api"}
cortex-m-semihosting = "0.3.5"
defmt = "0.1.0"

[features]
default = [
    "standalone",
    "defmt-trace",
]
standalone = []
uart = []
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

[[bin]]
name = "task-ping"
test = false
bench = false
