[package]
name = "task-pong"
version = "0.1.0"
authors = ["Cliff L. Biffle <cliff@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.3"
userlib = {path = "../userlib", features = ["log"]}
drv-user-leds-api = {path = "../drv/user-leds-api"}

[features]
default = ["standalone"]
standalone = []

# a target for `cargo xtask check`
[package.metadata.build]
target = "thumbv7em-none-eabihf"

[[bin]]
name = "task-pong"
test = false
bench = false
