[package]
name = "task-power"
version = "0.1.0"
authors = ["Bryan Cantrill <bryan@oxide.computer>"]
edition = "2018"

[package.metadata.build]
target = "thumbv7em-none-eabihf"

[dependencies]
userlib = {path = "../userlib", default-features = false}
ringbuf = {path = "../ringbuf" }
drv-i2c-api = {path = "../drv/i2c-api"}
cortex-m = "0.7"
cortex-m-semihosting = { version = "0.3.5", optional = true }
zerocopy = "0.3.0"
cfg-if = "0.1.10"
drv-i2c-devices = { path = "../drv/i2c-devices" }

[build-dependencies]
build-util = {path = "../build-util"}

[features]
default = ["standalone"]
standalone = ["itm", "drv-i2c-api/standalone" ]
itm = [ "userlib/log-itm" ]
semihosting = [ "cortex-m-semihosting", "userlib/log-semihosting" ]

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-power"
test = false
bench = false
